Install dependent gems

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -16,13 +16,12 @@
     # - smp
     # - wmi
     - ruby
+    - gems
 
 #
 # - beanstalkd
 # - memcached
 # - monit (???)
-# - ganglia
-# - gmetad
 # - gmetad-agg (???)
 # - gmetad-sync (???)
 
