WIP: emma appliance
Install emma from a migrated git repo.  Lots of workarounds necessary.

It appears that the build scripts that create the `emma.tar.gz` file do
a significant amount of processing.

There are also other issues

* Inability for bundler to find a valid installation path that includes
  any remote gems.
* The Gemfile.lock is out of date.
* ActiveRecord 3.x is at least somewhat(?) incompatible with the version
  of postgresql we have installed.  I currently suspect that this is
  limited to a single hardcoded `panic` log level.
* Inability to migrate database due to the modules not having been
  installed yet.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -19,10 +19,9 @@
     - ruby
     - gems
     - delia
+    - emma
 
 #
-# - beanstalkd
-# - memcached
 # - monit (???)
 # - gmetad-agg (???)
 # - gmetad-sync (???)
