--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,6 +13,10 @@ Vagrant.configure("2") do |config|
     v.vm.provision "ansible_local" do |ansible|
       ansible.playbook = File.join(ANSIBLE_DIR, "playbook.yml")
       ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'true'))
+
+      ansible.extra_vars = {
+        'github_token' => ENV.fetch('GH_TOKEN', ''),
+      }
     end
 
     v.vm.synced_folder ANSIBLE_DIR, "/ansible"
