--- a/ansible/roles/ruby/tasks/main.yml
+++ b/ansible/roles/ruby/tasks/main.yml
@@ -21,13 +21,45 @@
     name: ruby-build
     state: latest
 
+# The system openssl version (1.1.1f) isn't compatible with Ruby versions less
+# than 2.4.  We install an older version to link against.
+- name: Install openssl
+  vars:
+    openssl_version: openssl-1.0.2u
+  ansible.builtin.shell:
+    cmd: |
+      apt install build-essential checkinstall zlib1g-dev
+
+      mkdir /opt/src
+      cd /opt/src
+      wget https://www.openssl.org/source/{{ openssl_version }}.tar.gz
+      tar xf {{ openssl_version }}.tar.gz
+      cd {{ openssl_version }}
+
+      ./config --prefix=/opt/{{ openssl_version }} --openssldir=/opt/{{ openssl_version }} shared zlib
+      make
+      make test
+      make install
+
+      rm -rf /opt/{{ openssl_version }}/certs
+      ln -s /etc/ssl/certs /opt/{{ openssl_version }}
+
+      rm -rf /opt/src/{{ openssl_version }}
+    creates: /opt/{{ openssl_version }}
+
 - name: Build Rubies
+  vars:
+    openssl_version: openssl-1.0.2u
   ansible.builtin.command:
-    cmd: ruby-build {{ item }} /opt/ruby-{{ item }}
-    creates: /opt/ruby-{{ item }}
+    cmd: ruby-build {{ item.version }} /opt/ruby-{{ item.version }}
+    creates: /opt/ruby-{{ item.version }}
+  environment:
+    RUBY_CONFIGURE_OPTS: "{{ item.configure_opts }}"
   loop:
-    - 1.8.7
-    - 1.9.1-p431
+    - version: 1.8.7
+      configure_opts: ""
+    - version: 1.9.2-p0
+      configure_opts: "--with-openssl-dir=/opt/{{ openssl_version }}"
 
 - name: Link Rubies
   ansible.builtin.file:
@@ -36,10 +68,31 @@
     state: link
   loop:
     - src: /opt/ruby-1.8.7
+      dest: /opt/ruby-1.8
+
+    - src: /opt/ruby-1.9.2-p0
+      dest: /opt/ruby-1.9.2
+
+    - src: /opt/ruby-1.9.2
+      dest: /opt/ruby-1.9
+
+- name: Link Ruby binaries
+  ansible.builtin.file:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+    state: link
+  loop:
+    - src: /opt/ruby-1.8/bin/ruby
       dest: /usr/bin/ruby1.8
-    - src: /opt/ruby-1.9.1-p431
-      dest: /opt/ruby-1.9.1
-    - src: /opt/ruby-1.9.1-p431
-      dest: /usr/bin/ruby1.9.1
-    - src: /usr/bin/ruby1.9.1
+
+    - src: /opt/ruby-1.8/bin/gem
+      dest: /usr/bin/gem1.8
+
+    - src: /opt/ruby-1.9/bin/ruby
       dest: /usr/bin/ruby1.9
+
+    - src: /opt/ruby-1.9/bin/gem
+      dest: /usr/bin/gem1.9
+
+    - src: /opt/ruby-1.9/bin/rake
+      dest: /usr/bin/rake1.9
