--- a/ansible/roles/gems/tasks/main.yml
+++ b/ansible/roles/gems/tasks/main.yml
@@ -100,6 +100,12 @@
     # - safe_api
     # - RubyRRDtool
 
+- name: Create bundler1.9 symlink
+  ansible.builtin.file:
+    src: /opt/ruby-1.9/bin/bundle
+    dest: /usr/bin/bundle1.9
+    state: link
+
 - name: Install delia client config
   ansible.builtin.copy:
     src: delia_client.yml
