--- a/ansible/roles/phoenix-modules/tasks/main.yml
+++ b/ansible/roles/phoenix-modules/tasks/main.yml
@@ -97,3 +97,36 @@
       sudo -u www-data --preserve-env=PATH /bin/bash -c 'rake db:drop_and_create RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
     chdir: "{{ dest_path }}/{{ item }}"
   loop: "{{ modules }}"
+
+- name: Migrate database
+  vars:
+    rails_env: "{{ mode }}"
+  ansible.builtin.shell:
+    cmd: |
+      PATH=/opt/ruby-1.8/bin:$PATH
+      sudo -u www-data --preserve-env=PATH /bin/bash -c 'rake db:rebuild RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
+    chdir: "{{ dest_path }}/{{ item }}"
+  loop: "{{ modules }}"
+
+
+# - name: Install mongrel config files
+#   vars:
+#     mongrel_conf_dir: 
+#     template_src: "{{ mongrel_conf_dir }}/{{ module }}.yml"
+#     template_src: "{{ dest_path }}/{{ module }}/config/mongrel_cluster.yml"
+#     replacements:
+#       - regexp: "%MONGREL_USER%"
+#         replace: "www-data"
+#       - regexp: "%MONGREL_GROUP%"
+#         replace: "www-data"
+#       - regexp: "%ENV%"
+#         replace: "{{ mode }}"
+#       - regexp: "{{ module | upper }}_ROOT"
+#         replace: "/opt/concurrent-thinking/{{ module }}"
+#   include_tasks: install_tagged_configuration.yml
+#   loop: "{{ modules }}"
+#   loop_control:
+#     loop_var: module
+
+# - name: Install logrotation
+# - name: Install various appliance scripts
