Skeleton placeholder SNMP installation
Creates some directories that some hacor migrations expect to exist.  It
doesn't yet install any of the SNMP libraries or MIBS.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -13,11 +13,11 @@
     - beanstalkd
     - memcached
     - ganglia
-    # - smp
     # - wmi
     - data_dirs
     - ruby
     - gems
+    - snmp
     - phoenix-mongrel
     - delia
     - phoenix-modules
