--- a/ansible/roles/ruby/tasks/main.yml
+++ b/ansible/roles/ruby/tasks/main.yml
@@ -93,11 +93,17 @@
     - src: /opt/ruby-1.8/bin/gem
       dest: /usr/bin/gem1.8
 
+    - src: /opt/ruby-1.8/bin/irb
+      dest: /usr/bin/irb1.8
+
     - src: /opt/ruby-1.9/bin/ruby
       dest: /usr/bin/ruby1.9
 
     - src: /opt/ruby-1.9/bin/gem
       dest: /usr/bin/gem1.9
+
+    - src: /opt/ruby-1.9/bin/irb
+      dest: /usr/bin/irb1.9
 
     - src: /opt/ruby-1.9/bin/rake
       dest: /usr/bin/rake1.9
