--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -8,6 +8,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "ubuntu2204", primary: true do |v|
     v.vm.box = 'ubuntu/focal64'
+    v.vm.network "forwarded_port", guest:  80, host: 9080, host_ip: '127.0.0.1'
     v.vm.network "forwarded_port", guest: 443, host: 9443, host_ip: '127.0.0.1'
 
     v.vm.provision "ansible_local" do |ansible|
