--- a/ansible/roles/phoenix-modules/tasks/main.yml
+++ b/ansible/roles/phoenix-modules/tasks/main.yml
@@ -1,10 +1,10 @@
-- name: Verifying source code at "{{ role_path }}/files"
+- name: Verifying source code at "{{ role_path }}/files/tmp"
   ansible.builtin.shell:
     cmd: |
-      if [ ! -f {{ role_path }}/files/{{ item }}.tgz ] ; then
+      if [ ! -f {{ role_path }}/files/tmp/{{ item }}.tgz ] ; then
         cat <<EOF
           Could not find Phoenix src {{ item }}.tgz.
-          Download {{ item }}.tgz from dev.concertim to {{ role_path }}/files/ 
+          Download {{ item }}.tgz from dev.concertim to {{ role_path }}/files/tmp/ 
       EOF
         exit 1
       fi
@@ -13,22 +13,22 @@
 
 - name: Make destination directory
   ansible.builtin.file:
-    path: "{{ dest_path }}"
+    path: "{{ phoenix_modules_root_dir }}"
     owner: www-data
     group: www-data
-    mode: 755
+    mode: "755"
     state: directory
 
 - name: Extract tar files
   ansible.builtin.unarchive:
-    src: "{{ item }}.tgz"
-    dest: "{{ dest_path }}"
-    creates: "{{ dest_path }}/{{ item }}"
+    src: "tmp/{{ item }}.tgz"
+    dest: "{{ phoenix_modules_root_dir }}"
+    creates: "{{ phoenix_modules_root_dir }}/{{ item }}"
   loop: "{{ modules }}"
 
 - name: Correct ownership
   ansible.builtin.file:
-    path: "{{ dest_path }}/{{ item }}"
+    path: "{{ phoenix_modules_root_dir }}/{{ item }}"
     owner: www-data
     group: www-data
     recurse: true
@@ -48,7 +48,7 @@
     - name: Mount bind directory
       ansible.posix.mount:
         path: "{{ bind_directory }}"
-        src: "{{ dest_path }}"
+        src: "{{ phoenix_modules_root_dir }}"
         opts: bind
         fstype: "none"
         state: mounted
@@ -56,7 +56,7 @@
 
 - name: configure modules
   vars:
-    template_dest: "{{ dest_path }}/{{ module }}/config/local_environment.rb"
+    template_dest: "{{ phoenix_modules_root_dir }}/{{ module }}/config/local_environment.rb"
     template_src: "{{ template_dest }}.tagged"
     replacements:
       - regexp: "%PASSWORD_ENCRYPTION_SALT%"
@@ -73,14 +73,14 @@
 # - name: configuring nadia
 #   when: '"nadia" in modules'
 #   ansible.builtin.copy:
-#     src: "{{ dest_path }}/nadia/
+#     src: "{{ phoenix_modules_root_dir }}/nadia/
 #     dest: "{{ template_dest }}"
 #     remote_src: true
 
 - name: configuring uma
   when: '"uma" in modules'
   vars:
-    template_dest: "{{ dest_path }}/uma/db/fixtures/users.yml"
+    template_dest: "{{ phoenix_modules_root_dir }}/uma/db/fixtures/users.yml"
     template_src: "{{ template_dest }}.tagged"
     replacements:
       - regexp: "%INTEGRTOR_PASSWORD%"
@@ -93,10 +93,13 @@
     - name: Monkey patch active record
       ansible.builtin.copy:
         src: monkey_patch_active_record.rb
-        dest: "{{ dest_path }}/{{ item }}/config/initializers/"
+        dest: "{{ phoenix_modules_root_dir }}/{{ item }}/config/initializers/"
         owner: www-data
         group: www-data
       loop: "{{ modules }}"
+
+- name: Fix and hack hacor into submission
+  include_tasks: hacor_fixes_and_hacks.yml
 
 - name: Create database
   vars:
@@ -105,7 +108,7 @@
     cmd: |
       PATH=/opt/ruby-1.8/bin:$PATH
       sudo -u www-data --preserve-env=PATH /bin/bash -c 'rake db:drop_and_create RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
-    chdir: "{{ dest_path }}/{{ item }}"
+    chdir: "{{ phoenix_modules_root_dir }}/{{ item }}"
   loop: "{{ modules }}"
 
 - name: Migrate database
@@ -115,7 +118,7 @@
     cmd: |
       PATH=/opt/ruby-1.8/bin:$PATH
       sudo -u www-data --preserve-env=PATH /bin/bash -c 'rake db:rebuild RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
-    chdir: "{{ dest_path }}/{{ item }}"
+    chdir: "{{ phoenix_modules_root_dir }}/{{ item }}"
   loop: "{{ modules }}"
 
 
@@ -123,7 +126,7 @@
 #   vars:
 #     mongrel_conf_dir: 
 #     template_src: "{{ mongrel_conf_dir }}/{{ module }}.yml"
-#     template_src: "{{ dest_path }}/{{ module }}/config/mongrel_cluster.yml"
+#     template_src: "{{ phoenix_modules_root_dir }}/{{ module }}/config/mongrel_cluster.yml"
 #     replacements:
 #       - regexp: "%MONGREL_USER%"
 #         replace: "www-data"
