Install delia-plugins
I've omitted the `code_services`, `clara` and `clash` plugins as I don't
think we need them.  IIUC, they are used to provide a command line
interface to the appliance from the headnode or appliance UML console.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -33,6 +33,8 @@
       tags: phoenix-mongrel
     - role: delia
       tags: delia
+    - role: delia-plugins
+      tags: [delia, delia-plugins]
     - role: phoenix-modules
       tags: phoenix-modules
     - role: emma
