--- a/ansible/roles/delia/tasks/main.yml
+++ b/ansible/roles/delia/tasks/main.yml
@@ -4,7 +4,7 @@
   loop:
     # - daemons
     - delia_daemon
-    - delia
+    - delia-1.0.0
 
 - name: Install 1.9 gems
   ansible.builtin.command:
@@ -12,6 +12,17 @@
   loop:
     - daemons
     - delia_daemon
+
+- name: Link binaries
+  ansible.builtin.file:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+    state: link
+  loop:
+    - src: /opt/ruby-1.8/bin/delia
+      dest: /usr/bin/delia
+    - src: /opt/ruby-1.8/bin/check-delia
+      dest: /usr/bin/check-delia
 
 - name: Install delia configuration
   ansible.builtin.copy:
@@ -43,3 +54,8 @@
 #     line: "www-data ALL=NOPASSWD: /etc/init.d/delia"
 #     path: "/etc/sudoers"
 #     insertbefore: EOF
+
+# XXX check-delia assumes that `eth0` and `eth1` exist.  Consider patching in
+# place.  Or svn->git and fix properly.
+# - name: Patch check delia
+
