Enable services: delia; emma; mongrel_cluster

--- a/ansible/roles/delia-plugins/tasks/main.yml
+++ b/ansible/roles/delia-plugins/tasks/main.yml
@@ -36,3 +36,8 @@
         remote_src: yes
         src: "{{ config_build_dir.path }}"
         validate: ruby1.8 -ryaml -e 'YAML.load_file("%s")'
+
+# - name: Restart delia
+#   ansible.builtin.service:
+#     name: delia
+#     state: restarted
