WIP: Install mia from pre-built tar file

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -39,6 +39,8 @@
       tags: phoenix-modules
     - role: emma
       tags: emma
+    - role: package-mia
+      tags: [package-mia, mia]
 
 #
 # - gmetad-agg (???)
