--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
 
     v.vm.provision "ansible_local" do |ansible|
       ansible.playbook = File.join(ANSIBLE_DIR, "playbook.yml")
-      ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'true'))
+      ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'false'))
 
       ansible.extra_vars = {
         'github_token' => ENV.fetch('GH_TOKEN', ''),
