Install daemons from prepackaged tar file
A small selection of daemons have been installed.  The daemons have been
left out have been left out for one of a couple of reasons:

* They have dependencies that wouldn't install.
* I don't know what they do, and don't want to install deprecated/unused
  daemons.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 .vagrant
 /ansible/roles/phoenix-modules/files/tmp/*.tgz
 /ansible/roles/snmp/files/raw_mibs/
+/ansible/roles/package-daemons/files/tmp/*.tgz
