--- a/ansible/roles/package-mia/tasks/main.yml
+++ b/ansible/roles/package-mia/tasks/main.yml
@@ -85,6 +85,17 @@
         replace: "{{ mia_server_count }}"
   include_tasks: "{{ role_path }}/../phoenix-modules/tasks/install_tagged_configuration.yml"
 
+- name: Patch mia source code
+  ansible.builtin.patch:
+    src: "{{ item }}"
+    basedir: "{{ package_mia_root_dir }}/mia"
+    backup: yes
+    strip: 1
+  loop:
+    - mia.patch
+    - disable-ferret.patch
+
+
 - name: Touch unconfigured file
   ansible.builtin.copy:
     dest: "/data/private/share/etc/concurrent-thinking/appliance/unconfigured"
