--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,26 +1,30 @@
 ANSIBLE_DIR="../ansible"
+BOXES = %w(command1 command2)
 
 Vagrant.configure("2") do |config|
-  config.vm.provider "virtualbox" do |v|
-    # v.memory = 8192
-    v.memory = 2048
-  end
-
-  config.vm.define "ubuntu2204", primary: true do |v|
-    v.vm.box = 'ubuntu/focal64'
-    v.vm.network "forwarded_port", guest:  80, host: 9080, host_ip: '127.0.0.1'
-    v.vm.network "forwarded_port", guest: 443, host: 9443, host_ip: '127.0.0.1'
-
-    v.vm.provision "ansible_local" do |ansible|
-      ansible.playbook = File.join(ANSIBLE_DIR, "playbook.yml")
-      ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'false'))
-
-      ansible.extra_vars = {
-        'github_token' => ENV.fetch('GH_TOKEN', ''),
-      }
+  BOXES.each_with_index do |box, idx|
+    config.vm.provider "virtualbox" do |v|
+      # v.memory = 8192
+      v.memory = 2048
     end
 
-    v.vm.synced_folder ANSIBLE_DIR, "/ansible"
+    config.vm.define box, primary: true do |v|
+      v.vm.box = 'ubuntu/focal64'
+      v.vm.hostname = box
+      v.vm.network "forwarded_port", guest:  80, host: 9080 + idx, host_ip: '127.0.0.1'
+      v.vm.network "forwarded_port", guest: 443, host: 9443 + idx, host_ip: '127.0.0.1'
+
+      v.vm.provision "ansible_local" do |ansible|
+        ansible.playbook = File.join(ANSIBLE_DIR, "playbook.yml")
+        ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'false'))
+
+        ansible.extra_vars = {
+          'github_token' => ENV.fetch('GH_TOKEN', ''),
+        }
+      end
+
+      v.vm.synced_folder ANSIBLE_DIR, "/ansible"
+    end
   end
 end
 
