First pass at first time setup wizard
A ruby script `ftsw-automation.rb` has been created, this automates
`SAS`'s `SetupManagerAutomator` which in turn automates `SAS`'s
`SetupManager`.

This script is started via `SAS`'s `rails runner` which launches a new
process.  This new process appears to have issues with Romanced objects.

To work around the Romanced objects issue, another script `ftsw-users.rb`
has been created to update the users.  This script is started via
`EMMA`'s `rails runner`, from where it can access the `Uma::User` class
without needing to Romance anything.

The `SetupManager` calls out to a script `setup.sh`, which has been
copied from the original sources and largely disabled.  We may discover
in time that too much has been disabled.  In particular, the
configuration of `eth1`.

Also parts of `SetupManager` and some of its collaborators have been
disabled.  Again we may discover that we want some of this to be
reenabled.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- name: Configure machine to be a Flight Concertim MIA
+- name: Build machine to be an unconfigured (vanilla) Flight Concertim MIA
   hosts: all
   become: true
   become_user: root
