--- a/ansible/roles/ruby/tasks/main.yml
+++ b/ansible/roles/ruby/tasks/main.yml
@@ -53,3 +53,7 @@
 
     - src: /opt/ruby-1.9/bin/rake
       dest: /usr/bin/rake1.9
+
+    - src: /usr/bin/ruby1.9
+      dest: /usr/bin/ruby1.9.1
+
